Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,9 @@
    "source": [
     "#Your code here; import sqlite, create a connection and then a cursor object\n",
     "import sqlite3\n",
-    "connection = sqlite3.connect('planets.db')."
+    "connection = sqlite3.connect('planets.db')\n",
+    "\n",
+    "\n"
    ]
   },
   {
