Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,8 +72,7 @@
     "#Your code here; import sqlite, create a connection and then a cursor object\n",
     "import sqlite3\n",
     "connection = sqlite3.connect('dogs.db')\n",
-    "\n",
-    "\n"
+    "cursor = connection.cursor()\n"
    ]
   },
   {
