Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,9 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor"
+    "cursor.execute(\"\"\"\n",
+    "SELEC\n",
+    "\"\"\")"
    ]
   },
   {
