Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,9 @@
    "source": [
     "#Your code here\n",
     "cursor.execute(\"\"\"\n",
-    "SELEC\n",
+    "SELECT name, breed\n",
+    "FROM dogs\n",
+    "WHERE \n",
     "\"\"\")"
    ]
   },
