Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
     "cursor.execute(\"\"\"\n",
     "SELECT name, breed\n",
     "FROM dogs\n",
-    "WHERE \n",
+    "WHERE gender == \"F\"\n",
     "\"\"\")"
    ]
   },
