Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,8 @@
     "SELECT name, breed\n",
     "FROM dogs\n",
     "WHERE gender == \"F\"\n",
-    "\"\"\")"
+    ";\n",
+    "\"\"\").fetchall()"
    ]
   },
   {
