Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy "
+    "import numpy as np"
    ]
   },
   {
@@ -135,7 +135,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_array = np.array([1, 2, 3])"
+   ]
   },
   {
    "cell_type": "code",
