--- a/index.ipynb
+++ b/index.ipynb
@@ -132,11 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "first_array = np.array([1, 2, 3])"
+    "first_array = np.array([1, 2, 3])\n",
+    "first_array"
    ]
   },
   {
@@ -144,7 +156,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "second_array = np.array"
+   ]
   },
   {
    "cell_type": "code",
