--- a/index.ipynb
+++ b/index.ipynb
@@ -153,11 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "second_array = np.array"
+    "second_array = np.array([4, 5, 6])\n",
+    "second_array"
    ]
   },
   {
